# gimpilbm

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.markdown  byterun1.c  byterun1.h  configure  configure.in  gimp-ilbm-0.9.4-1.spec  gimpilbm.jcc  grayscale.c  grayscale.h  gui.c  gui.h  hamehb.c  hamehb.h  iff.c  iff.h  ilbm.c  ilbm.h  oldgimp.h  plugin.c  plugin.h
tools/: iffparser.py
